test/good/functions/variadic06.px

class A def
    func f(...b: [Bool]): Void def
        print b

A().f(true, false)
