test/bad/functions/call10.px

func f(b: Bool): Void def
    return

f(b = true, b = true)
